--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,14 @@ navbar-links:
   Organisation: "about"
   Rationale: "rationale"
   Sponsors: "sponsors"
+  Transparency: "gdpr"
   Resources:
     - The Alan Turing Institute: "http://www.turing.ac.uk"
     - University of Cambridge: "http://www.cam.ac.uk/"
+    - HSPH Center for Communicable Disease Dynamics: "http://ccdd.hsph.harvard.edu/"
+    - Models of Infectious Disease Agent Study: "https://www.nigms.nih.gov/Research/specificareas/MIDAS/"
+    - The R Epidemics Consortium: "http://www.repidemicsconsortium.org"
+    - Julia Computing: "http://juliacomputing.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
